--- a/httpproxy/filters/autoproxy/ip.html
+++ b/httpproxy/filters/autoproxy/ip.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 <center>
-<textarea rows="20" cols="50" spellcheck="false" placeholder="请把包含 IP 地址的文本粘贴到此处"></textarea>
+<textarea rows="20" cols="50" onkeyup="javascript:convert()" onblur="javascript:convert()" spellcheck="false" placeholder="请把包含 IP 地址的文本粘贴到此处"></textarea>
 <textarea rows="20" cols="50" spellcheck="false" style="background-color:#F3F3F3;" readonly="true" placeholder="格式化后的 IP 地址将显示在此"></textarea>
 </center>
 <script type="text/javascript">
-	window.onload = function() {
+	function convert() {
 		var text1 = document.getElementsByTagName('textarea')[0];
 		var text2 = document.getElementsByTagName('textarea')[1];
-		var func = function() {
+		if (text1.value != "") {
 			var matches = text1.value.match(/([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3})/g)
 			if (matches != null) {
 				text2.value = "\"" + matches.join("\",\n\"") + "\",";
 				// text2.select();
 			} else {
-				text2.value = "";
+				text2.value = "没有检测到 IP 地址";
 			}
+		} else {
+			text2.value = "";
 		}
-		text1.onkeyup = func;
-		text1.onblur = func;
 	}
 </script>
 </body>
