--- a/httpproxy/filters/autoproxy/ip.html
+++ b/httpproxy/filters/autoproxy/ip.html
@@ -12,41 +12,50 @@
 			<textarea name="rawips" rows="20" cols="45" onkeyup="javascript:convert()" onblur="javascript:convert()" spellcheck="false" placeholder="请把包含 IP 地址的文本粘贴到此处"></textarea>
 			<textarea name="jsonips" rows="20" cols="45" spellcheck="false" style="background-color:#F3F3F3;" readonly="true" placeholder="格式化后的 IP 地址将显示在此"></textarea>
 		</center>
-		<!-- BEGIN IPHTML COMMENT
+		<div name="hiddendiv" style="display:none">
 		<center>
 			<input type="submit" name="submit" disabled value="写入到本地 json 文件" style="padding:8px;margin-top:40px;"/>
 		</center>
 		<center>
 			<p>{{.Message}}</p>
 		</center>
-		END IPHTML COMMENT -->
+		</div>
 	</form>
 	<script type="text/javascript">
-		function enable_submit(value) {
-			var buttons = document.getElementsByName('submit');
-			if (buttons.length > 0) {
-				buttons[0].disabled = !value;
+	window.onload = function () {
+		if (window.location.href.indexOf('http://') == 0) {
+			var divs = document.getElementsByName('hiddendiv');
+			if (divs.length > 0) {
+				divs[0].style.display = '';
 			}
 		}
+	}
 
-		function convert() {
-			var text1 = document.getElementsByTagName('textarea')[0];
-			var text2 = document.getElementsByTagName('textarea')[1];
-			if (text1.value != "") {
-				var matches = text1.value.match(/([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3})/g)
-				if (matches != null) {
-					text2.value = "\"" + matches.join("\",\n\"") + "\",";
-					enable_submit(true);
-					// text2.select();
-				} else {
-					enable_submit(false);
-					text2.value = "没有检测到 IP 地址";
-				}
+	function enable_submit(value) {
+		var buttons = document.getElementsByName('submit');
+		if (buttons.length > 0) {
+			buttons[0].disabled = !value;
+		}
+	}
+
+	function convert() {
+		var text1 = document.getElementsByTagName('textarea')[0];
+		var text2 = document.getElementsByTagName('textarea')[1];
+		if (text1.value != "") {
+			var matches = text1.value.match(/([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3})/g)
+			if (matches != null) {
+				text2.value = "\"" + matches.join("\",\n\"") + "\",";
+				enable_submit(true);
+				// text2.select();
 			} else {
 				enable_submit(false);
-				text2.value = "";
+				text2.value = "没有检测到 IP 地址";
 			}
+		} else {
+			enable_submit(false);
+			text2.value = "";
 		}
+	}
 	</script>
 </body>
 </html>
