--- a/httpproxy/filters/autoproxy/ip.html
+++ b/httpproxy/filters/autoproxy/ip.html
@@ -47,6 +47,7 @@
 			}
 			var matches = text1.value.match(regex)
 			if (matches != null) {
+				matches = matches.sort().filter(function(el,i,a){if(i==a.indexOf(el))return 1;return 0})
 				text2.value = "\"" + matches.join("\",\n\"") + "\",";
 				enable_submit(true);
 				// text2.select();
